--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,26 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title> Admin - Dashboard</title>
+  <title> College Management</title>
   <!-- loader-->
-  <link href="assets/css/pace.min.css" rel="stylesheet" />
-  <script src="assets/js/pace.min.js"></script>
+  <link href="{{ url_for('static', filename='assets/css/pace.min.css') }}" rel="stylesheet" />
+  <script src="{{ url_for('static', filename='assets/js/pace.min.js') }}"></script>
   <!--favicon-->
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="{{ url_for('static', filename='assets/images/favicon.ico') }}" type="image/x-icon">
   <!-- Vector CSS -->
-  <link href="assets/plugins/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" />
+  <!-- <link href="{{ url_for('static', filename='assets/plugins/vectormap/jquery-jvectormap-2.0.2.css') }}" rel="stylesheet" /> -->
   <!-- simplebar CSS-->
-  <link href="assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='assets/plugins/simplebar/css/simplebar.css') }}" rel="stylesheet" />
   <!-- Bootstrap core CSS-->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='assets/css/bootstrap.min.css') }}" rel="stylesheet" />
   <!-- animate CSS-->
-  <link href="assets/css/animate.css" rel="stylesheet" type="text/css" />
+  <link href="{{ url_for('static', filename='assets/css/animate.css') }}" rel="stylesheet" type="text/css" />
   <!-- Icons CSS-->
-  <link href="assets/css/icons.css" rel="stylesheet" type="text/css" />
+  <link href="{{ url_for('static', filename='assets/css/icons.css') }}" rel="stylesheet" type="text/css" />
   <!-- Sidebar CSS-->
-  <link href="assets/css/sidebar-menu.css" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='assets/css/sidebar-menu.css') }}" rel="stylesheet" />
   <!-- Custom Style-->
-  <link href="assets/css/app-style.css" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='assets/css/app-style.css') }}" rel="stylesheet" />
 
 </head>
 
@@ -38,65 +38,59 @@
     <!--Start sidebar-wrapper-->
     <div id="sidebar-wrapper" data-simplebar="" data-simplebar-auto-hide="true">
       <div class="brand-logo">
-        <a href="dashboard.html">
-          <img src="assets/images/logo-icon.png" class="logo-icon" alt="logo icon">
-          <h5 class="logo-text">Faculty</h5>
+        <a href="/faculty_dash">
+          <img src="{{ url_for('static', filename='assets/images/logo-icon.png') }}" class="logo-icon" alt="logo icon">
+          <h5 class="logo-text">College Management</h5>
         </a>
         <!-- <button class="btn toggle-menu logo-text" href="javascript:void();"><img src="cross-icon.png"
             alt="Close slidebar"></button> -->
       </div>
       <ul class="sidebar-menu do-nicescrol">
         <li>
-          <a href="dashboard.html">
+          <a href="/faculty_dash">
             <i class="zmdi zmdi-view-dashboard"></i> <span>Dashboard</span>
           </a>
         </li>
 
         <!-- <li>
-          <a href="faculties.html">
+          <a href="/faculties">
             <i class="zmdi zmdi-account"></i> <span>Faculties</span>
           </a>
         </li>
 
         <li>
-          <a href="faculties.html">
-            <i class="zmdi zmdi-account"></i> <span>Managers</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="subjects.html">
+          <a href="/subjects">
             <i class="zmdi zmdi-format-list-bulleted"></i> <span>Subject</span>
           </a>
         </li>
 
         <li>
-          <a href="stream.html">
+          <a href="/stream">
             <i class="zmdi zmdi-grid"></i> <span>Stream</span>
-          </a>
-        </li> -->
-
-        <li>
-          <a href="calendar.html">
-            <i class="zmdi zmdi-calendar-check"></i> <span>Calendar</span>
-            <small class="badge float-right badge-light">New</small>
           </a>
         </li>
 
-        <!-- <li>
-          <a href="profile.html">
+        <li>
+          <a href="/calendar">
+            <i class="zmdi zmdi-calendar-check"></i> <span>Calendar</span>
+              <small class="badge float-right badge-light">New</small>
+          </a>
+        </li>
+
+        <li>
+          <a href="/add_s">
             <i class="zmdi zmdi-settings"></i> <span>Add Subjects/Streams</span>
           </a>
         </li>
 
         <li>
-          <a href="setting.html">
-            <i class="zmdi zmdi-settings"></i> <span>Add Faculties/Managers</span>
+          <a href="/add_f">
+            <i class="zmdi zmdi-settings"></i> <span>Add Faculties</span>
           </a>
-        </li> -->
+        </li>
       </ul>
 
-    </div>
+    </div> -->
     <!--End sidebar-wrapper-->
 
     <!--Start topbar header-->
@@ -162,7 +156,7 @@
               <li class="dropdown-divider"></li>
               <li class="dropdown-item"><i class="icon-settings mr-2"></i>Setting</li>
               <li class="dropdown-divider"></li> -->
-          <li class="dropdown-item"><i class="icon-power mr-2"></i><a href="login.html">Logout</a></li>
+          <li class="dropdown-item"><i class="icon-power mr-2"></i><a href="/">Logout</a></li>
           <!-- </ul> -->
           </li>
         </ul>
@@ -276,140 +270,90 @@
             </div>
           </div>
         </div>
+        <!--start overlay-->
+        <div class="overlay toggle-menu"></div>
+        <!--end overlay-->
 
-        <!-- <div class="row">
-          <div class="col-12 col-lg-12 col-xl-12">
-            <div class="card">
-              <div class="card-header">Site Traffic
-                <div class="card-action">
-                  <div class="dropdown">
-                    <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
-                      <i class="icon-options"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                      <a class="dropdown-item" href="javascript:void();">Action</a>
-                      <a class="dropdown-item" href="javascript:void();">Another action</a>
-                      <a class="dropdown-item" href="javascript:void();">Something else here</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="javascript:void();">Separated link</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card-body">
-                <ul class="list-inline">
-                  <li class="list-inline-item"><i class="fa fa-circle mr-2 text-white"></i>Active</li>
-                  <li class="list-inline-item"><i class="fa fa-circle mr-2 text-light"></i>Inactive</li>
-                </ul>
-                <div class="chart-container-1">
-                  <canvas id="chart1"></canvas>
-                </div>
-              </div>
-
-              <div class="row m-0 row-group text-center border-top border-light-3">
-                <div class="col-12 col-lg-4">
-                  <div class="p-3">
-                    <h5 class="mb-0">45.87M</h5>
-                    <small class="mb-0">Overall Visitor <span> <i class="fa fa-arrow-up"></i> 2.43%</span></small>
-                  </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                  <div class="p-3">
-                    <h5 class="mb-0">15:48</h5>
-                    <small class="mb-0">Visitor Duration <span> <i class="fa fa-arrow-up"></i> 12.65%</span></small>
-                  </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                  <div class="p-3">
-                    <h5 class="mb-0">245.65</h5>
-                    <small class="mb-0">Pages/Visit <span> <i class="fa fa-arrow-up"></i> 5.62%</span></small>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div> -->
       </div>
-      <!--End Row-->
-
-
-      <!--Start footer-->
-      <footer class="footer">
-        <div class="container">
-          <div class="text-center">
-            Copyright © 2018 Dashtreme Admin
-          </div>
-        </div>
-      </footer>
-      <!--End footer-->
-
-      <!--start color switcher-->
-      <div class="right-sidebar">
-        <div class="switcher-icon">
-          <i class="zmdi zmdi-settings zmdi-hc-spin"></i>
-        </div>
-        <div class="right-sidebar-content">
-
-          <p class="mb-0">Gaussion Texture</p>
-          <hr>
-
-          <ul class="switcher">
-            <li id="theme1"></li>
-            <li id="theme2"></li>
-            <li id="theme3"></li>
-            <li id="theme4"></li>
-            <li id="theme5"></li>
-            <li id="theme6"></li>
-          </ul>
-
-          <p class="mb-0">Gradient Background</p>
-          <hr>
-
-          <ul class="switcher">
-            <li id="theme7"></li>
-            <li id="theme8"></li>
-            <li id="theme9"></li>
-            <li id="theme10"></li>
-            <li id="theme11"></li>
-            <li id="theme12"></li>
-            <li id="theme13"></li>
-            <li id="theme14"></li>
-            <li id="theme15"></li>
-          </ul>
-
-        </div>
-      </div>
-      <!--end color switcher-->
-
     </div>
-    <!--End wrapper-->
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <!--Start footer-->
+    <footer class="footer">
+      <div class="container">
+        <div class="text-center">
+          Copyright © 2021 College Management
+        </div>
+      </div>
+    </footer>
+    <!--End footer-->
 
-    <!-- simplebar js -->
-    <script src="assets/plugins/simplebar/js/simplebar.js"></script>
-    <!-- sidebar-menu js -->
-    <script src="assets/js/sidebar-menu.js"></script>
-    <!-- loader scripts -->
-    <script src="assets/js/jquery.loading-indicator.js"></script>
-    <!-- Custom scripts -->
-    <script src="assets/js/app-script.js"></script>
+    <!--start color switcher-->
+    <div class="right-sidebar">
+      <div class="switcher-icon">
+        <i class="zmdi zmdi-settings zmdi-hc-spin"></i>
+      </div>
+      <div class="right-sidebar-content">
 
-    <!-- Full Calendar -->
-    <script src='assets/plugins/fullcalendar/js/moment.min.js'></script>
-    <script src='assets/plugins/fullcalendar/js/fullcalendar.min.js'></script>
-    <script src="assets/plugins/fullcalendar/js/fullcalendar-custom-script.js"></script>
+        <p class="mb-0">Gaussion Texture</p>
+        <hr>
 
-    <!-- Chart js -->
+        <ul class="switcher">
+          <li id="theme1"></li>
+          <li id="theme2"></li>
+          <li id="theme3"></li>
+          <li id="theme4"></li>
+          <li id="theme5"></li>
+          <li id="theme6"></li>
+        </ul>
 
-    <script src="assets/plugins/Chart.js/Chart.min.js"></script>
+        <p class="mb-0">Gradient Background</p>
+        <hr>
 
-    <!-- Index js -->
-    <script src="assets/js/index.js"></script>
+        <ul class="switcher">
+          <li id="theme7"></li>
+          <li id="theme8"></li>
+          <li id="theme9"></li>
+          <li id="theme10"></li>
+          <li id="theme11"></li>
+          <li id="theme12"></li>
+          <li id="theme13"></li>
+          <li id="theme14"></li>
+          <li id="theme15"></li>
+        </ul>
+
+      </div>
+    </div>
+    <!--end color switcher-->
+
+  </div>
+  <!--End wrapper-->
+
+  <!-- Bootstrap core JavaScript-->
+  <script src="{{ url_for('static', filename='assets/js/jquery.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='assets/js/popper.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='assets/js/bootstrap.min.js') }}"></script>
+
+  <!-- simplebar js -->
+  <script src="{{ url_for('static', filename='assets/plugins/simplebar/js/simplebar.js') }}"></script>
+  <!-- sidebar-menu js -->
+  <script src="{{ url_for('static', filename='assets/js/sidebar-menu.js') }}"></script>
+  <!-- loader scripts -->
+  <!-- <script src="{{ url_for('static', filename='assets/js/jquery.loading-indicator.js') }}"></script> -->
+  <!-- Custom scripts -->
+  <script src="{{ url_for('static', filename='assets/js/app-script.js') }}"></script>
+
+  <!-- Full Calendar -->
+  <script src="{{ url_for('static', filename='assets/plugins/fullcalendar/js/moment.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='assets/plugins/fullcalendar/js/fullcalendar.min.js') }}"></script>
+  <script
+    src="{{ url_for('static', filename='assets/plugins/fullcalendar/js/fullcalendar-custom-script.js') }}"></script>
+
+  <!-- Chart js -->
+
+  <script src="{{ url_for('static', filename='assets/plugins/Chart.js/Chart.min.js') }}"></script>
+
+  <!-- Index js -->
+  <script src="{{ url_for('static', filename='assets/js/index.js') }}"></script>
 
 
 </body>
